TEZ-4726: Replace deprecated java.net.URL constructors with URI alternatives